# cleo_subcommands_example

./: .gitignore  README.rst  pyproject.toml
myapp/console/: application.py
myapp/console/commands/: __init__.py  cmd2.py  cmd3.py  command.py
myapp/console/commands/cmd1/: __init__.py  sub1.py  sub2.py
